--- a/cmt/Makefile.RootCore
+++ b/cmt/Makefile.RootCore
@@ -13,7 +13,7 @@ PACKAGE          = QuickAnaProfiling
 PACKAGE_PRELOAD  = 
 
 # additional compilation flags to pass (not propagated to dependent packages):
-PACKAGE_CXXFLAGS = 
+PACKAGE_CXXFLAGS = -I/afs/cern.ch/sw/lcg/external/valgrind/3.8.0/x86_64-slc6-gcc48-opt/include/
 
 # additional compilation flags to pass (propagated to dependent packages):
 PACKAGE_OBJFLAGS = 
@@ -28,7 +28,7 @@ PACKAGE_BINFLAGS =
 PACKAGE_LIBFLAGS = 
 
 # the list of packages we depend on:
-PACKAGE_DEP      = 
+PACKAGE_DEP      = PATInterfaces AsgTools Asg_Boost QuickAna
 
 # the list of packages we use if present, but that we can work without :
 PACKAGE_TRYDEP   = 
@@ -37,7 +37,7 @@ PACKAGE_TRYDEP   =
 PACKAGE_SCRIPTS  = 
 
 # whether to use pedantic compilation:
-PACKAGE_PEDANTIC = 0
+PACKAGE_PEDANTIC = 1
 
 # whether to turn *off* optimization (set to dict to do it only for
 # dictionaries):
